refactor dashboards view. changed styling of dashboard creator

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -8,6 +8,11 @@
   border-radius: 50%;
   margin-bottom: 30px;
 }
+.user-avi {
+  max-height: 20px;
+  max-height: 20px;
+  border-radius: 20%;
+}
 .sidenav-button {
   display: block;
 }
@@ -26,6 +31,12 @@
   max-height: 250px;
   margin-bottom: 20px;
   margin-left: 125px;
+}
+.edit-btn {
+  position: absolute;
+  left: 900px;
+  max-height: 80px;
+  max-width: 80px;
 }
 .resizeme {
   resize: both;
