--- a/client/styles/_dashboards.styl
+++ b/client/styles/_dashboards.styl
@@ -3,3 +3,8 @@
   max-height 250px
   margin-bottom  20px
   margin-left 125px
+.edit-btn
+  position absolute
+  left 900px
+  max-height 80px
+  max-width 80px
